--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -54,7 +54,7 @@
 
     <div class="pt-28 flex w-full min-h-screen">
       <nav
-        class="flex flex-col w-64 bg-gray-900/80 border-r border-gray-700 px-4 py-6 space-y-2"
+        class="fixed flex flex-col w-64 bg-gray-900/80 border-r border-gray-700 px-4 py-6 space-y-2 h-screen"
       >
         <div class="flex flex-row justify-between">
           <span class="text-sm font-semibold text-gray-400">Conversations</span>
