--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -14,7 +14,7 @@
         <h1 class="font-semibold text-gray-300 text-lg">Login</h1>
       </div>
       <form
-        class="flex flex-col w-full px-4 pb-6 rounded-lg shadow-lg text-gray-300 justify-center"
+        class="flex flex-col space-y-2 w-full px-4 pb-6 rounded-lg shadow-lg text-gray-300 justify-center"
         hx-post="/auth/login"
         hx-trigger="submit"
         hx-swap="innerHTML"
